--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,20 +11,29 @@
 nav {
   background-color: #e1e4df;
   padding: 30px;
-  font-size: 30px;
+  font-size: 25px;
   color: rgb(0, 0, 0);
-
+ 
 }
 li {
   list-style-type: none;
+ 
 }
 .header_nav-list{
   display: flex;
+
 }
 a{
   text-decoration: none;
   color: rgb(0, 0, 0);
-  margin-left: 10px;
+  margin: 5px;
+}
+
+a:hover{
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  margin: 5px;
+  cursor: pointer;
 }
 
 .layer {
@@ -34,4 +43,38 @@ a{
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.ringlegende{
+  display: flex;
+  margin: 5px;
+flex-wrap: wrap;
+}
+
+.rings{
+  display: flex;
+  flex-direction: column;
+  margin: 5px;
+  width: 300px;
+  height: 300px;
+  background-color: #e1e4df;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
+
+img {
+  max-width: 200px;
+  max-height: 200px;
+  margin: 5px;
+}
+
+h1 {
+  font-size: 30px;
+  margin: 5px;
+}
+
+h2 {
+  font-size: 20px;
+  margin: 5px;
 }
